# tributus-engine

./: .gitignore  LICENSE  README.md  pyproject.toml
src/tributus_engine/: __init__.py  engine.py  models.py
src/tributus_engine/implementations/: __init__.py  cofins.py  ibs_cbs.py  ipi.py  pis.py
src/tributus_engine/implementations/icms/: __init__.py  base.py  cst.py  fcp.py
src/tributus_engine/interfaces/: __init__.py  protocols.py
tests/cofins/: test_cofins.py
tests/engine/: test_engine.py
tests/ibs_cbs/: test_ibs_cbs.py
tests/icms/: test_base.py  test_cst.py  test_fcp.py
tests/ipi/: test_ipi.py
tests/pis/: test_pis.py
