[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tributus-engine"
version = "0.2.0"
description = "Tributus Engine - Brazilian Tax Engine and Calculator Library"
readme = "README.md"
authors = [
  { name = "Mackilem Van der Laan", email = "mack.vdl@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tributus_engine = [
    "data/docs/*.json",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
